Week 2 - Map visualization, Preprocessing imgage data generator.

--- a/Forest_Fire_Detection_using_DL.ipynb
+++ b/Forest_Fire_Detection_using_DL.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "31b12RAXnYBq"
       },
@@ -92,13 +92,7 @@
     {
       "cell_type": "code",
       "execution_count": 6,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "micmxs0en-vp",
-        "outputId": "a0e6988d-045f-4077-dad8-26878d82a3fe"
-      },
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -121,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -195,6 +189,107 @@
         "  plt.title(f'{classes[1]} \\n shape: {img.shape}')\n",
         "  plt.axis('off')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 1887 images belonging to 2 classes.\n",
+            "Found 402 images belonging to 2 classes.\n",
+            "Found 410 images belonging to 2 classes.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Preprocessing\n",
+        "# Image dimensions and batch size\n",
+        "img_width, img_height = 150, 150\n",
+        "batch_size = 32 # there will be 32 images in a batch!\n",
+        "\n",
+        "# Data generators\n",
+        "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "val_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "    train_dir,\n",
+        "    target_size = (img_width, img_height),\n",
+        "    batch_size = batch_size,\n",
+        "    class_mode = 'binary',\n",
+        "    shuffle = True\n",
+        ")\n",
+        "\n",
+        "val_generator = val_datagen.flow_from_directory(\n",
+        "    val_dir,\n",
+        "    target_size = (img_width, img_height),\n",
+        "    batch_size = batch_size,\n",
+        "    class_mode = 'binary',\n",
+        "    shuffle = True\n",
+        ")\n",
+        "\n",
+        "test_generator = test_datagen.flow_from_directory(\n",
+        "    test_dir,\n",
+        "    target_size = (img_width, img_height),\n",
+        "    batch_size = batch_size,\n",
+        "    class_mode = 'binary',\n",
+        "    shuffle = True\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Class Names: ['fire', 'nofire']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# map the indices\n",
+        "class_mapping = train_generator.class_indices\n",
+        "# print(class_mapping)\n",
+        "# Extract the class names\n",
+        "class_names = list(class_mapping.keys())\n",
+        "print(\"Class Names:\", class_names)\n",
+        "     \n",
+        "Class_names: ['fire','nofire']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Let's build the CNN Model\n",
+        "model = Sequential([\n",
+        "    Input(shape=(img_width, img_height, 3)),\n",
+        "    Conv2D(32, (3,3), activation='relu'),\n",
+        "    MaxPooling2D(pool_size=(2,2)),\n",
+        "\n",
+        "    Conv2D(64, (3, 3), activation='relu'),\n",
+        "    MaxPooling2D(pool_size=(2, 2)),\n",
+        "\n",
+        "    Conv2D(128, (3, 3), activation='relu'),\n",
+        "    MaxPooling2D(pool_size=(2, 2)),\n",
+        "\n",
+        "    Flatten(),\n",
+        "    Dense(512, activation='relu'),\n",
+        "    Dropout(0.5),\n",
+        "    Dense(1, activation='sigmoid')\n",
+        "]\n",
+        ")"
       ]
     }
   ],
